<resources>
    <string name="app_name">AndroidRestaurant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="starter">Entrées</string>
    <string name="main">Plats</string>
    <string name="finish">Desserts</string>

    <string name="titre">Android Restaurant</string>
    <string name="carte">La carte</string>

    <string name="priceButton">Total " " </string>

    <string name="panier"></string>

    <string name="Commander">Buy</string>


</resources>